Fix protocol handling in mod_deflate input filter PR 23287

git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/trunk@560689 13f79535-47bb-0310-9956-ffa450edef68